# FreeRTOS-Community-Supported-Demos

CORTEX_M0+_RP2040/: CMakeLists.txt
CORTEX_M0+_RP2040/smp_idle_hardfault/: CMakeLists.txt  FreeRTOSConfig.h  main.c
CORTEX_M0+_RP2040/static_freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c  test_tasks.c
